--- a/ndvi_application.ipynb
+++ b/ndvi_application.ipynb
@@ -1,13 +1,65 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6bbcb6dd-0a8f-46a2-ae30-4fa9d1c4f6f1",
+   "metadata": {},
+   "source": [
+    "# Producing an Application Map for Crop Treatment\n",
+    "\n",
+    "This example is taken from Pix4D's website. Pix4D's various products do orthomosaics and can also\n",
+    "automatically produce things like treatment maps for crops. But let's see if we can duplicate that\n",
+    "in Python without leaning on paid software!\n",
+    "\n",
+    "https://community.pix4d.com/t/prescription-maps-for-variable-rate-application-pix4dfields-tutorials/23039\n",
+    "\n",
+    "Note that we won't be doing the image-stitching portion for this workbook. There are free alternatives\n",
+    "available for photogrammetry, including OpenDroneMap (and the GUI version WebODM). While not as robust,\n",
+    "it has come a long way over the years."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33cc1ad1-53a4-4a5e-9846-a26fefff8c27",
+   "metadata": {},
+   "source": [
+    "## NDRE and NDVI Defined\n",
+    "\n",
+    "### NDVI\n",
+    "\n",
+    "Most folks in the agricultural field are aware of the Normalized Difference Vegetation Index (NDVI). This attempts\n",
+    "to capture the health of a plant via the NIR and Red bands. Healthy plants strongly absorb red light at the top of\n",
+    "the canopy, while NIR reflects very strongly. The ranges for NDVI are as follows:\n",
+    "\n",
+    "| Value | Class |\n",
+    "|-----|-----|\n",
+    "| -1.0 to 0.0 | Dead/non-plants |\n",
+    "| 0.0 to 0.33 | Unhealthy plant |\n",
+    "|0.33 to 0.66 | Moderately healthy plant |\n",
+    "|0.66 to 1.0 | Very healthy plant |\n",
+    "\n",
+    "## NDRE\n",
+    "\n",
+    "This replaces the red band with the red edge band, which is much more sensitive to leaf nitrogen content. It is\n",
+    "suitable for permanent or dense crops, and will be more accurate for crops almost ready for harvest. This is what\n",
+    "we're going to use for this application, although we're also going to visualize NDVI. Values look like the following:\n",
+    "\n",
+    "| Value | Class |\n",
+    "|-----|-----|\n",
+    "| -1.0 to 0.1 | Bad/no N uptake |\n",
+    "| 0.1 to 0.3 | Weak N uptake |\n",
+    "| 0.3 to 0.4 | Moderate N uptake |\n",
+    "| 0.4 to 0.5 | Good N uptake |"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 91,
    "id": "c2621ba0-757d-4324-8761-824efe26cab4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# NDVI application map exercise\n",
+    "# NDVI/NDRE application map exercise\n",
     "\n",
     "# Author: Lee Hathccock\n",
     "\n",
@@ -25,8 +77,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "91a2db42-347d-4408-b084-94f92b4b1228",
+   "metadata": {},
+   "source": [
+    "## Opening the Image and Reading Cellsizes\n",
+    "\n",
+    "Much like before, we open our image and get the geotransform and projection. This time, we\n",
+    "also want to go ahead and assign part of our geotransform, the x and y cellsizes, to\n",
+    "variables for later."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f4e2fabb-969c-4434-af7f-e7fe56e73d64",
    "metadata": {},
    "outputs": [],
@@ -39,14 +103,25 @@
     "wkt = img.GetProjection()\n",
     "proj = osr.SpatialReference(wkt)\n",
     "\n",
+    "print (geotransform)\n",
+    "\n",
     "# While we don't have to, will be useful to assign our cell sizes to variables for later\n",
     "xcellsize = geotransform[1]\n",
     "ycellsize = geotransform[5]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5627c48e-b814-4e8f-9eb2-13f068298e2c",
+   "metadata": {},
+   "source": [
+    "This time, we're reading in just the bands we need, which for NDVI and NDRE are\n",
+    "red, red edge, and NIR, and putting them into NumPy arrays."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "537d8411-379e-412c-9b04-8b2bf73614a4",
    "metadata": {},
    "outputs": [],
@@ -62,8 +137,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ae3f29ae-499c-433a-abd9-f65dbc11f5cb",
+   "metadata": {},
+   "source": [
+    "Once again grab our NoData values."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "829f85ff-1256-4231-bbc4-09e5548d2dd6",
    "metadata": {},
    "outputs": [],
@@ -83,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "078f6eaa-8e02-4a9b-aa03-40d62bea4f7a",
    "metadata": {},
    "outputs": [],
@@ -94,8 +177,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dfd6f716-451d-4619-aa7b-24ac2f38da96",
+   "metadata": {},
+   "source": [
+    "Just as a sanity check, let's view the red band and make sure it imported correctly."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7421e3fd-4ff3-4237-86f7-0a4423ac5a48",
    "metadata": {},
    "outputs": [
@@ -137,8 +228,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0c9681be-9823-418f-9b13-afa833acf54e",
+   "metadata": {},
+   "source": [
+    "## Computing NDVI\n",
+    "\n",
+    "We mentioned before that NDVI uses the Red and NIR bands. The formula should look quite familiar, as it\n",
+    "(and NDRE) are very similar to NDWI.\n",
+    "\n",
+    "\\begin{equation}\n",
+    "(NIR - Red) / (NIR + Red)\n",
+    "\\end{equation}\n",
+    "\n",
+    "Note that the places in dark green are very healthy crops, and the more yellow areas are potentially more\n",
+    "stressed crops. The red areas are primarily bare soil and roads."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "52f7e552-affe-4774-a9f1-f8f0cbea4033",
    "metadata": {},
    "outputs": [
@@ -167,22 +276,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0b2be82b-f71e-436e-b70e-72927033a255",
+   "metadata": {},
+   "source": [
+    "## Using the GDAL Warp Function\n",
+    "\n",
+    "One thing we may wish to do is resize our imagery while still keeping the geographic extents. One\n",
+    "way to do this is via the \"Warp\" function, which takes an input GeoTIFF and takes various parameters\n",
+    "to alter it and push to a new GeoTIFF. (Note that when using VRTs, you can also skip pushing to an\n",
+    "intermediate file and store directly in memory.)\n",
+    "\n",
+    "In our case, I'm going to decimate the image by a factor of five, as for what we're doing, we don't\n",
+    "need such fine-grained resolution."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 92,
    "id": "75006959-881d-4330-a0df-c90e03700d15",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<osgeo.gdal.Dataset; proxy of <Swig Object of type 'GDALDatasetShadow *' at 0x000001C891AED6C0> >"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We need to create a temporary GeoTIFF file to store our results in. Be careful with this,\n",
     "# as the rows and columns may be transposed from what the NumPy array holds currently.\n",
@@ -204,12 +318,26 @@
     "# We don't necessarily want the full resolution of the GeoTIFF, so use the Warp function\n",
     "# to reduce the resolution of the raster.\n",
     "\n",
-    "gdal.Warp(\"ndvi_lowres.tif\", \"ndvi.tif\", xRes=xcellsize*5, yRes=ycellsize*5, resampleAlg=\"bilinear\")"
+    "result = gdal.Warp(\"ndvi_lowres.tif\", \"ndvi.tif\", xRes=xcellsize*5, yRes=ycellsize*5, resampleAlg=\"bilinear\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f523a4d5-2832-4c10-accd-d25edb617039",
+   "metadata": {},
+   "source": [
+    "## Computing NDRE\n",
+    "\n",
+    "Once again, a familiar equation emerges, this time using red edge instead of red.\n",
+    "\n",
+    "\\begin{equation}\n",
+    "(NIR - Red Edge) / (NIR + Red Edge)\n",
+    "\\end{equation}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "5741fc92-8d31-4696-a7f4-823b052fb591",
    "metadata": {},
    "outputs": [
@@ -238,22 +366,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1577c0b7-03fb-412a-8e4d-53a7eb9d856c",
+   "metadata": {},
+   "source": [
+    "Once again we resize our image."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 93,
    "id": "f622fe6e-77d8-449f-9fbf-34ff204ffb97",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<osgeo.gdal.Dataset; proxy of <Swig Object of type 'GDALDatasetShadow *' at 0x000001C891AED7E0> >"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We need to create a temporary GeoTIFF file to store our results in. Be careful with this,\n",
     "# as the rows and columns may be transposed from what the NumPy array holds currently.\n",
@@ -272,12 +397,29 @@
     "outdata = None\n",
     "\n",
     "# Reduce the resolution like last time to match.\n",
-    "gdal.Warp(\"ndre_lowres.tif\", \"ndre.tif\", xRes=xcellsize*5, yRes=ycellsize*5, resampleAlg=\"bilinear\")"
+    "result = gdal.Warp(\"ndre_lowres.tif\", \"ndre.tif\", xRes=xcellsize*5, yRes=ycellsize*5, resampleAlg=\"bilinear\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ce9dde5-1532-4e70-8f24-ab8261e17aec",
+   "metadata": {},
+   "source": [
+    "## Using the NumPy select Command\n",
+    "\n",
+    "Since we're doing more than a binary classification on this dataset, we will leverage\n",
+    "the NumPy \"select\" command, which lets us put together a list of conditions and choices\n",
+    "to assign values to each conditional. In this case, we're going to assign NaN to any\n",
+    "NDVI values less than zero, and then work through our NDRE conditional values for\n",
+    "NDVI values greater than zero.\n",
+    "\n",
+    "In all technicality, the example Pix4D gave does not leverage NDVI at all, and it may\n",
+    "not make much difference here either. It is included for example purposes only."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "a8db9671-bbe9-45d1-bd2f-89152fab8761",
    "metadata": {},
    "outputs": [
@@ -320,8 +462,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81cbf1d5-6800-4271-8421-87d4918d4633",
+   "metadata": {},
+   "source": [
+    "Looking pretty good! We're still going to do a sieve filter because why not?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "8e5b7d00-8961-4e8d-b3e6-8884098a924a",
    "metadata": {},
    "outputs": [
@@ -370,23 +520,194 @@
     "flt = gdal.Open(\"ndvi_ndre_filter.tif\")\n",
     "fltimg = flt.GetRasterBand(1).ReadAsArray()\n",
     "nodata = flt.GetRasterBand(1).GetNoDataValue()\n",
-    "fltimg = np.where(fltimg == nodata, np.nan, fltimg)\n",
-    "imflt = plt.imshow(fltimg, cmap='RdYlGn')"
+    "fltimg_nan = np.where(fltimg == nodata, np.nan, fltimg)\n",
+    "imflt = plt.imshow(fltimg_nan, cmap='RdYlGn')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e4418fb-043f-47d0-9edf-150669ddd033",
+   "metadata": {},
+   "source": [
+    "## Choosing an Application Rate and Strategy\n",
+    "\n",
+    "You can take two different approaches to treatment for this field: heterogeneous or\n",
+    "homogeneous. As Pix4D puts it, this is basically either Robin Hood or The Sheriff of\n",
+    "Nottingham.\n",
+    "\n",
+    "### Homogenous (Robin Hood)\n",
+    "\n",
+    "The idea is to take from the richer areas of the field and try to boost production in\n",
+    "areas that aren't terribly healthy.\n",
+    "\n",
+    "### Heterogeneous (Sheriff of Nottingham)\n",
+    "\n",
+    "In this case, we keep boosting the healthy plant areas and keep them rolling, effectively\n",
+    "taking from the poor to give to the rich.\n",
+    "\n",
+    "Depending on the field, both of these are perfectly valid strategies to maximize yield.\n",
+    "\n",
+    "#### Selecting zones generically\n",
+    "\n",
+    "While we don't necessarily need to do it this way as we manually assigned classes above,\n",
+    "we can generically parse our fields for unique values to denote zones we will work with.\n",
+    "We're only really interested in three of our classes, though - values from 0.1 to 0.3,\n",
+    "values from 0.3 to 0.4, and values greater than 0.4.\n",
+    "\n",
+    "Since there are NaN values in here, to get our average NDRE value for each zone (we'll need\n",
+    "it in a second), we use the \"nanmean\" function. We're also storing the arrays we get from\n",
+    "selecting each zone's values into a list, which we will then merge using the \"concatenate\"\n",
+    "function to get the field-wide average for only our zones of interest."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 82,
+   "id": "24ca20d8-d45f-4741-88b0-e830223d9c50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4]\n",
+      "[0.22490096, 0.334162, 0.55432576]\n",
+      "0.2940604\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now let's compute our rates. Using two different approaches, Robin Hood and Sheriff of Nottingham.\n",
+    "\n",
+    "# We're going with a base rate of 55 lbs of nitrogen per acre. (This is close to 60 kgN/ha, but I want\n",
+    "# Imperial units, thank you very much!)\n",
+    "\n",
+    "# If we want to Robin Hood this thing, let's look at our average value for each zone.\n",
+    "\n",
+    "zoneavg = []\n",
+    "extractarrays = []\n",
+    "\n",
+    "# Let's look for our unique values. We technically already know this, but let's do it this way anyway.\n",
+    "unique_vals = np.unique(fltimg)\n",
+    "print(unique_vals)\n",
+    "\n",
+    "for val in unique_vals:\n",
+    "    extract = ndre[fltimg == val]\n",
+    "    mean = np.nanmean(extract)\n",
+    "    if mean >= .1:\n",
+    "        zoneavg.append(mean)\n",
+    "        extractarrays.append(extract)\n",
+    "print (zoneavg)\n",
+    "\n",
+    "extract_combined = np.concatenate(extractarrays)\n",
+    "fieldavg = np.nanmean(extract_combined)\n",
+    "\n",
+    "print (fieldavg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78e8f71c-3b90-421a-80be-e003631e44d5",
+   "metadata": {},
+   "source": [
+    "## Computing Application Rates\n",
+    "\n",
+    "### Homogenize (Robin Hood)\n",
+    "\n",
+    "Now we're ready to rock with application rates. The formula for homogenization is defined as:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "Rate_{zone} = (Rate_{flat} \\color{red}- \\color{black}[Rate_{flat} * ((NDRE_{ZoneAvg} - NDRE_{FieldAvg})/NDRE_{FieldAvg}) * Spread]\n",
+    "\\end{equation}\n",
+    "\n",
+    "We're starting with our flat rate (in this case 55 lbs/acre), and then adjusting based on the zone's average\n",
+    "compared to the field average and then multiplying by a spread function, which will exaggerate or lessen the\n",
+    "adjustments between zones. In this case, we're subtracting all that from the flat rate to take from the\n",
+    "best areas of the field and give more to the poor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "33c950e6-7883-433f-b29d-e83ddeb13c45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[64.70150038599968, 49.374657459557056, 18.49067948758602]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Robin Hood algorithm (homogenize)\n",
+    "\n",
+    "zonerate = []\n",
+    "\n",
+    "spread = 0.75\n",
+    "flatrate = 55\n",
+    "for z in zoneavg:\n",
+    "    rate = flatrate - (flatrate * ((z - fieldavg)/fieldavg) * spread)\n",
+    "    zonerate.append(rate)\n",
+    "print (zonerate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f39018bf-2a2e-4ee9-9bce-b12db16b1e5d",
+   "metadata": {},
+   "source": [
+    "### Heterogenize (Sheriff)\n",
+    "\n",
+    "The formula is virtually identical, but this time we add to the flat rate instead of subtracting to boost the\n",
+    "richest areas of the field further.\n",
+    "\n",
+    "\\begin{equation}\n",
+    "Rate_{zone} = (Rate_{flat} \\color{YellowGreen}+ \\color{black}[Rate_{flat} * ((NDRE_{ZoneAvg} - NDRE_{FieldAvg})/NDRE_{FieldAvg}) * Spread]\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "16b03c00-5be5-474e-8087-1d5a459169b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[45.29849961400032, 60.625342540442944, 91.50932051241398]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sheriff (heterogenize)\n",
+    "\n",
+    "zonerate = []\n",
+    "\n",
+    "spread = 0.75\n",
+    "flatrate = 55\n",
+    "for z in zoneavg:\n",
+    "    rate = flatrate + (flatrate * ((z - fieldavg)/fieldavg) * spread)\n",
+    "    zonerate.append(rate)\n",
+    "print (zonerate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "id": "15a50366-ae82-4dba-a503-a20eae70af18",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1c892f3cd90>"
+       "<matplotlib.image.AxesImage at 0x21d97226040>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -407,6 +728,14 @@
     "result_array = result.ReadAsArray()\n",
     "plt.imshow(result_array)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10c37def-4f70-4079-9dd0-a27c57684eb3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
