Updated plant volume and added exercise version

--- a/plant_volume.ipynb
+++ b/plant_volume.ipynb
@@ -101,6 +101,10 @@
     "xRes, yRes, and resampleAlg to clip and resize the DSM and orthomosaics to all\n",
     "match each other.\n",
     "\n",
+    "- Summer DSM - 2023-07-07_USDA_NACA_400ft_dsm.tif\n",
+    "- Winter DSM - 2023-01-27_USDA_NACA_400ft_dsm.tif\n",
+    "- Summer BGREN - 2023-07-07_USDA_NACA_400ft_BGREN_DLS_11pTarp.tif\n",
+    "\n",
     "Hint: Copy the Warp command from before and refer to this documentation: https://gdal.org/api/python/utilities.html#osgeo.gdal.Warp\n",
     "\n",
     "Pay attention to the order the extent comes back in - it may not match what is needed for the Warp function.\n",
@@ -153,7 +157,6 @@
     "except:\n",
     "    outimg = gdal.Warp(filepath + \"summer_dsm_clip.tif\", filepath + \"2023-07-07_USDA_NACA_400ft_dsm.tif\", outputBounds = extent_mod,\n",
     "                    resampleAlg=gdal.GRA_NearestNeighbour, options=['COMPRESS=DEFLATE'])\n",
-    "print (outimg)\n",
     "outimg = None\n",
     "\n",
     "# Let's open the generated GeoTIFF. Could have put this straight to memory instead.\n",
@@ -171,12 +174,10 @@
     "# Clip our other rasters and resample to match summer DSM.\n",
     "outimg = gdal.Warp(filepath + \"winter_dsm_clip.tif\", filepath + \"2023-01-27_USDA_NACA_400ft_dsm.tif\", outputBounds=extent_mod, \n",
     "                    xRes=xcellsize, yRes=ycellsize, resampleAlg=gdal.GRA_Bilinear, options=['COMPRESS=DEFLATE'])\n",
-    "print (outimg)\n",
     "outimg = None\n",
     "\n",
     "outimg = gdal.Warp(filepath + \"summer_bgren_clip.tif\", filepath + \"2023-07-07_USDA_NACA_400ft_BGREN_DLS_11pTarp.tif\", outputBounds=extent_mod, \n",
     "                    xRes=xcellsize, yRes=ycellsize, resampleAlg=gdal.GRA_Bilinear, options=['COMPRESS=DEFLATE'])\n",
-    "print (outimg)\n",
     "outimg = None"
    ]
   },
