Updated to download data from OSF

--- a/land_water_mask.ipynb
+++ b/land_water_mask.ipynb
@@ -65,7 +65,41 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
-    "import cv2\n"
+    "import cv2\n",
+    "from urllib.request import urlretrieve\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df21fb2c-9d05-4cae-be12-9b20dd6a22c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a folder for data downloads\n",
+    "if not os.path.exists('./data'):\n",
+    "    os.makedirs('./data')\n",
+    "\n",
+    "# info for shapefile to be downloaded\n",
+    "base_filename='data/2021-11-04_Turnage_Florida_Flight2_Clip_BGREN'\n",
+    "tif_info=  {'.tif':'https://osf.io/k3xm8/download',\n",
+    "            '.tfw':'https://osf.io/ne8af/download',\n",
+    "            '.tif.aux.xml':'https://osf.io/xhgkb/download',\n",
+    "            '.tif.ovr':'https://osf.io/z5tnw/download'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6b72906-c1db-4017-8956-9588cad11947",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only need to run this cell once to download imagery\n",
+    "for ext,url in tif_info.items():\n",
+    "    filename=base_filename+ext\n",
+    "    print('downloading',filename)\n",
+    "    urlretrieve(url,filename) # download and save data"
    ]
   },
   {
@@ -92,7 +126,7 @@
    "outputs": [],
    "source": [
     "# Open the image file\n",
-    "img = gdal.Open(\"./data/lah1/2021-11-04_Turnage_Florida_Flight2_Clip_BGREN.tif\")\n",
+    "img = gdal.Open(base_filename+'.tif')\n",
     "\n",
     "# Get our image's geographic information\n",
     "geotransform = img.GetGeoTransform()\n",
@@ -941,21 +975,13 @@
     "diff = np.where(newarr2 != fltimg, 2, 1)\n",
     "plt.imshow(diff)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd762149-3435-4d76-b658-340210aaf44a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pyworkshop]",
+   "display_name": "Python [conda env:.conda-pyworkshop] *",
    "language": "python",
-   "name": "conda-env-pyworkshop-py"
+   "name": "conda-env-.conda-pyworkshop-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -967,7 +993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
