--- a/ndvi_application.ipynb
+++ b/ndvi_application.ipynb
@@ -71,7 +71,42 @@
     "from osgeo import ogr\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.colors as colors\n"
+    "import matplotlib.colors as colors\n",
+    "from urllib.request import urlretrieve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8c60cc7-eb86-40b4-b1ea-3ba1e2c7e574",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a folder for data downloads\n",
+    "if not os.path.exists('./data'):\n",
+    "    os.makedirs('./data')\n",
+    "\n",
+    "# info for shapefile to be downloaded\n",
+    "base_filename='data/2023-07-07_USDA_NACA_400ft_BGREN_DLS_11pTarp'\n",
+    "tif_info=  {'.tif':'https://osf.io/wugp3/download',\n",
+    "            '.tfw':'https://osf.io/z5kvw/download',\n",
+    "            '.tif.aux.xml':'https://osf.io/sbwdf/download',\n",
+    "            '.tif.ovr':'https://osf.io/h4abx/download',\n",
+    "            '.tif.xml':'https://osf.io/vqze6/download'}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36977081-6bc6-4340-b834-5b287fd5d0e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only need to run this cell once to download imagery\n",
+    "for ext,url in tif_info.items():\n",
+    "    filename=base_filename+ext\n",
+    "    print('downloading',filename)\n",
+    "    urlretrieve(url,filename) # download and save data\n"
    ]
   },
   {
@@ -94,7 +129,7 @@
    "outputs": [],
    "source": [
     "# Open the image file\n",
-    "img = gdal.Open(\"./data/lah1/2023-07-07_USDA_NACA_400ft_BGREN_DLS_11pTarp.tif\")\n",
+    "img = gdal.Open(base_filename+'.tif')\n",
     "\n",
     "# Get our image's geographic information\n",
     "geotransform = img.GetGeoTransform()\n",
@@ -616,21 +651,13 @@
     "    zonerate.append(rate)\n",
     "print (zonerate)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6fd29bb5-d387-4295-a7bf-9afab99b15ae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pyworkshop]",
+   "display_name": "Python [conda env:.conda-pyworkshop] *",
    "language": "python",
-   "name": "conda-env-pyworkshop-py"
+   "name": "conda-env-.conda-pyworkshop-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -642,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
