--- a/plant_volume_exercise.ipynb
+++ b/plant_volume_exercise.ipynb
@@ -56,7 +56,58 @@
     "from osgeo import ogr\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.colors as colors"
+    "import matplotlib.colors as colors\n",
+    "from urllib.request import urlretrieve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b2ccd47-911f-49a4-ada0-951204d1b51e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a folder for data downloads\n",
+    "if not os.path.exists('./data'):\n",
+    "    os.makedirs('./data')\n",
+    "\n",
+    "# info for shapefile to be downloaded\n",
+    "filepath='data/'\n",
+    "shp_info=  {'dsm_clip.cpg':'https://osf.io/2kj8d/download',\n",
+    "            'dsm_clip.dbf':'https://osf.io/p5m3w/download',\n",
+    "            'dsm_clip.prj':'https://osf.io/thr98/download',\n",
+    "            'dsm_clip.sbn':'https://osf.io/4tfp2/download',\n",
+    "            'dsm_clip.sbx':'https://osf.io/qey4v/download',\n",
+    "            'dsm_clip.shp':'https://osf.io/7zwfh/download',\n",
+    "            'dsm_clip.shp.xml':'https://osf.io/m7zkt/download',\n",
+    "            'dsm_clip.shx':'https://osf.io/9s8wb/download'}\n",
+    "tif_info=  {'2023-07-07_USDA_NACA_400ft_dsm.prj':'https://osf.io/vrzu2/download',\n",
+    "            '2023-07-07_USDA_NACA_400ft_dsm.tfw':'https://osf.io/pxg2u/download',\n",
+    "            '2023-07-07_USDA_NACA_400ft_dsm.tif':'https://osf.io/n3ar8/download',\n",
+    "            '2023-01-27_USDA_NACA_400ft_dsm.prj':'https://osf.io/d298t/download',\n",
+    "            '2023-01-27_USDA_NACA_400ft_dsm.tfw':'https://osf.io/897fn/download',\n",
+    "            '2023-01-27_USDA_NACA_400ft_dsm.tif':'https://osf.io/cmn94/download',\n",
+    "            '2023-01-27_USDA_NACA_400ft_dsm.tif.aux.xml':'https://osf.io/m2ent/download'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0e5c90d-f141-41b5-86f8-54473f77b2ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only need to run this cell once to download data\n",
+    "\n",
+    "for f,url in shp_info.items():\n",
+    "    filename=filepath+f\n",
+    "    print('downloading',filename)\n",
+    "    urlretrieve(url,filename) # download and save data\n",
+    "\n",
+    "for f,url in tif_info.items():\n",
+    "    filename=filepath+f\n",
+    "    print('downloading',filename)\n",
+    "    urlretrieve(url,filename) # download and save data"
    ]
   },
   {
@@ -267,9 +318,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pyworkshop]",
+   "display_name": "Python [conda env:.conda-pyworkshop] *",
    "language": "python",
-   "name": "conda-env-pyworkshop-py"
+   "name": "conda-env-.conda-pyworkshop-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -281,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
